--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,7 +7,7 @@ public_folder: /images
 
 collections:
   - name: 'blog'
-    label: 'Blog'
+    label: 'Blog Post'
     folder: 'content/blog'
     create: true
     slug: '{{slug}}'
@@ -15,7 +15,8 @@ collections:
       preview: false
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Path', name: 'slug', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+      - { label: 'Author', name: 'author', widget: 'string' }
       - { label: 'Featured Image', name: 'image', widget: 'image' }
-      - { label: 'Tags', name: 'tags', widget: 'list' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
