--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: content/images
+media_folder: /content/images
 public_folder: /images
 
 collections:
