--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: content/images
-public_folder: content/images
+media_folder: ../images
+public_folder: ../images
 
 collections:
   - name: 'blog'
