--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
 		"build": "gatsby build",
 		"develop": "gatsby develop",
 		"format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-		"lint": "eslint .",
-		"lint:fix": "eslint . --fix",
+		"lint": "eslint . \"**/*.{js,jsx,json,md}\"",
+		"lint:fix": "eslint . --fix \"**/*.{js,jsx,json,md}\"",
 		"start": "npm run develop",
 		"serve": "gatsby serve",
 		"clean": "gatsby clean",
