--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"gatsby-remark-images": "^3.2.0",
 		"gatsby-remark-relative-images": "^0.3.0",
 		"gatsby-source-filesystem": "^2.1.46",
+		"gatsby-source-instagram": "^0.7.0",
 		"gatsby-transformer-remark": "^2.7.0",
 		"gatsby-transformer-sharp": "^2.3.13",
 		"netlify-cms-app": "^2.11.32",
