--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@mdx-js/mdx": "^1.5.7",
 		"@mdx-js/react": "^1.5.7",
 		"babel-plugin-styled-components": "^1.10.7",
+		"framer-motion": "^1.10.3",
 		"gatsby": "^2.19.7",
 		"gatsby-background-image": "^0.10.2",
 		"gatsby-image": "^2.2.39",
@@ -18,6 +19,7 @@
 		"gatsby-plugin-react-helmet": "^3.1.21",
 		"gatsby-plugin-sharp": "^2.4.3",
 		"gatsby-plugin-styled-components": "^3.2.1",
+		"gatsby-plugin-transition-link": "^1.18.0",
 		"gatsby-remark-images": "^3.2.0",
 		"gatsby-remark-relative-images": "^0.3.0",
 		"gatsby-source-filesystem": "^2.1.46",
