--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -34,13 +34,13 @@ collections:
         - { label: 'Page Title', name: 'title', widget: 'string' }
         - { label: 'Image', name: 'image', widget: 'image' }
         - { label: 'About Page Text', name: 'body', widget: 'markdown' }
-    - name: 'welcome'
-      label: 'Welcome Message'
-      file: 'content/page-content/index.md'
-      editor:
-        preview: false
-      fields:
-        - { label: 'Welcome Title', name: 'title', widget: 'string' }
-        - { label: 'Hero Image', name: 'image', widget: 'image' }
-        - { label: 'Welcome Text', name: 'body', widget: 'markdown' }
+    # - name: 'welcome'
+    #   label: 'Welcome Message'
+    #   file: 'content/page-content/index.md'
+    #   editor:
+    #     preview: false
+    #   fields:
+    #     - { label: 'Hero Image', name: 'image', widget: 'image' }
+    #     - { label: 'Welcome Title', name: 'title', widget: 'string' }
+    #     - { label: 'Welcome Text', name: 'body', widget: 'markdown' }
 
