--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,22 +25,22 @@ collections:
   - name: 'page content'
     label: 'Custom Page Content'
     files:
-    - name: 'about'
-      label: 'About Page'
-      file: 'content/page-content/about.md'
-      editor:
-        preview: false
-      fields:
-        - { label: 'Page Title', name: 'title', widget: 'string' }
-        - { label: 'Image', name: 'image', widget: 'image' }
-        - { label: 'About Page Text', name: 'body', widget: 'markdown' }
-    # - name: 'welcome'
-    #   label: 'Welcome Message'
-    #   file: 'content/page-content/index.md'
-    #   editor:
-    #     preview: false
-    #   fields:
-    #     - { label: 'Hero Image', name: 'image', widget: 'image' }
-    #     - { label: 'Welcome Title', name: 'title', widget: 'string' }
-    #     - { label: 'Welcome Text', name: 'body', widget: 'markdown' }
+      - name: 'about'
+        label: 'About Page'
+        file: 'content/page-content/about.md'
+        editor:
+          preview: false
+        fields:
+          - { label: 'Page Title', name: 'title', widget: 'string' }
+          - { label: 'Image', name: 'image', widget: 'image' }
+          - { label: 'About Page Text', name: 'body', widget: 'markdown' }
+      - name: 'welcome'
+        label: 'Welcome Message'
+        file: 'content/page-content/index.md'
+        editor:
+          preview: false
+        fields:
+          - { label: 'Hero Image', name: 'image', widget: 'image' }
+          - { label: 'Welcome Title', name: 'title', widget: 'string' }
+          - { label: 'Welcome Text', name: 'body', widget: 'markdown' }
 
