--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"@mdx-js/react": "^1.5.7",
 		"babel-plugin-styled-components": "^1.10.7",
 		"framer-motion": "^1.10.3",
-		"gatsby": "^2.19.7",
+		"gatsby": "^2.20.36",
 		"gatsby-background-image": "^0.10.2",
 		"gatsby-image": "^2.2.39",
 		"gatsby-plugin-manifest": "^2.2.39",
@@ -53,7 +53,7 @@
 	],
 	"license": "MIT",
 	"scripts": {
-		"build": "gatsby build",
+		"build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
 		"develop": "gatsby develop",
 		"format": "prettier --write \"**/*.{js,jsx,json,md}\"",
 		"lint": "eslint . \"**/*.{js,jsx,json,md}\"",
