--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "gatsby-starter-default",
+	"name": "the-humdrum-dandelion",
 	"private": true,
 	"description": "Creative outlet for Jonah's incredible mind and a canvas for her beautiful words.",
 	"version": "0.1.0",
@@ -64,7 +64,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/gatsbyjs/gatsby-starter-default"
+		"url": "https://github.com/BrettBlox/The-Humdrum-Dandelion"
 	},
 	"bugs": {
 		"url": "https://github.com/gatsbyjs/gatsby/issues"
