--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "the-humdrum-dandelion",
 	"private": true,
-	"description": "Creative outlet for Jonah's incredible mind and a canvas for her beautiful words.",
+	"description": "𝙰 𝚌𝚘𝚖𝚖𝚘𝚗 𝚐𝚊𝚛𝚍𝚎𝚗 𝚠𝚎𝚎𝚍’𝚜 𝚖𝚞𝚜𝚒𝚗𝚐𝚜 𝚘𝚗 𝚕𝚒𝚏𝚎, 𝚕𝚘𝚟𝚎, 𝚖𝚘𝚝𝚑𝚎𝚛𝚑𝚘𝚘𝚍, 𝚊𝚗𝚍 𝚝𝚑𝚎 𝚖𝚒𝚗𝚍.",
 	"version": "0.1.0",
 	"author": "Brett Bloxom <brettbloxom@gmail.com>",
 	"dependencies": {
@@ -31,6 +31,8 @@
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-helmet": "^5.2.1",
+		"remark": "^12.0.0",
+		"remark-html": "^11.0.1",
 		"slugify": "^1.4.0",
 		"styled-components": "^5.0.1"
 	},
