--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"gatsby": "^2.20.36",
 		"gatsby-background-image": "^0.10.2",
 		"gatsby-image": "^2.2.39",
+		"gatsby-plugin-mailchimp": "^5.1.2",
 		"gatsby-plugin-manifest": "^2.2.39",
 		"gatsby-plugin-mdx": "^1.0.77",
 		"gatsby-plugin-netlify-cms": "^4.2.0",
