about image shape-outside

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,3 @@
 {
-  "extends": ["wesbos"],
-  "rules": {
-    "no-console": 1,
-    "prettier/prettier": [
-      "error",
-      {
-        "trailingComma": "es5",
-        "singleQuote": true,
-        "jsxSingleQuote": true,
-        "semi": false,
-        "printWidth": 120,
-        "tabWidth": 2
-      }
-    ]
-  }
+	"extends": ["brettblox"]
 }
