--- a/package.json
+++ b/package.json
@@ -38,18 +38,18 @@
 		"styled-components": "^5.0.1"
 	},
 	"devDependencies": {
-		"babel-eslint": "^9.0.0",
-		"eslint": "^5.16.0",
-		"eslint-config-airbnb": "^17.1.1",
-		"eslint-config-prettier": "^4.3.0",
-		"eslint-config-wesbos": "0.0.19",
-		"eslint-plugin-html": "^5.0.5",
-		"eslint-plugin-import": "^2.20.1",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-prettier": "^3.1.2",
-		"eslint-plugin-react": "^7.19.0",
-		"eslint-plugin-react-hooks": "^1.7.0",
-		"prettier": "^1.19.1"
+		"babel-eslint": "^10.1.0",
+		"eslint": "^7.5.0",
+		"eslint-config-airbnb": "^18.2.0",
+		"eslint-config-brettblox": "0.0.11",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-html": "^6.0.2",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-jsx-a11y": "^6.3.1",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.20.5",
+		"eslint-plugin-react-hooks": "^4.0.8",
+		"prettier": "^2.0.5"
 	},
 	"keywords": [
 		"gatsby"
