--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"babel-eslint": "^10.1.0",
 		"eslint": "^7.5.0",
 		"eslint-config-airbnb": "^18.2.0",
-		"eslint-config-brettblox": "0.0.11",
+		"eslint-config-brettblox": "^0.0.5",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-html": "^6.0.2",
 		"eslint-plugin-import": "^2.22.0",
