--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
 		"@mdx-js/react": "^1.5.7",
 		"babel-plugin-styled-components": "^1.10.7",
 		"framer-motion": "^2.3.0",
-		"gatsby": "^2.24.39",
+		"gatsby": "^2.30.0",
 		"gatsby-background-image": "^1.1.1",
 		"gatsby-image": "^2.4.15",
 		"gatsby-plugin-mailchimp": "^5.1.2",
 		"gatsby-plugin-manifest": "^2.2.39",
-		"gatsby-plugin-mdx": "^1.0.77",
 		"gatsby-plugin-netlify-cms": "^4.2.0",
 		"gatsby-plugin-offline": "^3.2.23",
 		"gatsby-plugin-react-helmet": "^3.1.21",
@@ -59,8 +58,8 @@
 		"build": "gatsby build",
 		"develop": "gatsby develop",
 		"format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-		"lint": "eslint . \"**/*.{js,jsx,json,md}\"",
-		"lint:fix": "eslint . --fix \"**/*.{js,jsx,json,md}\"",
+		"lint": "eslint src/components/** src/pages/** src/hooks/** src/context/** -c .eslintrc --ext js,jsx",
+		"lint:fix": "eslint --fix src/components/** src/pages/** src/hooks/** src/context/** -c .eslintrc --ext js,jsx",
 		"start": "npm run develop",
 		"serve": "gatsby serve",
 		"clean": "gatsby clean",
